--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=0.13,<0.14"]
 build-backend = "maturin"
 
 [project]
-name = "kmedoids"
+name = "kmedoids-debug"
 version = "0.4.1"
 description = "k-Medoids Clustering in Python with FasterPAM"
 requires-dist = ["numpy"]
